--- a/styles/Dashboard.module.css
+++ b/styles/Dashboard.module.css
@@ -173,3 +173,10 @@
   border: none !important;
   background: #fafafa !important;
 }
+
+.logTableInformation {
+  color: black;
+  font-weight: 600;
+  margin-bottom: 1rem;
+  padding-left: 0.5rem;
+}
